--- a/notif-pi/pom.xml
+++ b/notif-pi/pom.xml
@@ -55,7 +55,7 @@
 	</dependencies>
 
 	<build>
-        <finalName>notifpi2</finalName>
+        <finalName>notifpi</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
